2013-08-05  Roland McGrath  <roland@hack.frob.com>

	* include/resolv.h [_RESOLV_H_]:
	Don't include <tls.h>.
	(__resp, _res): Move declaration and macro out of [_LIBC_REENTRANT].
	* resolv/res_libc.c: Don't include <tls.h>.
	(_res): Use __attribute__ ((nocommon)) in place of
	__attribute__ ((section (".bss"))).

	* Makefile ($(common-objpfx)linkobj/libc_pic.a):
	If [sunrpc not in $(subdirs)], define to use libc_pic.a directly.

2013-08-05  Roland McGrath  <roland@hack.frob.com>

	* resolv/res_send.c (send_dg): Don't try to use ioctl unless [FIONREAD].

2013-08-05  Roland McGrath  <roland@hack.frob.com>

	* resolv/res_hconf.c [!NOT_IN_libc] (ifaddrs): Declare
	only under [SIOCGIFCONF && SIOCGIFNETMASK].

	* resolv/res_mkquery.c: Include <sys/time.h>.

2013-08-05  Roland McGrath  <roland@hack.frob.com>

	* inet/ifreq.c: Moved to ...
	* sysdeps/unix/ifreq.c: ... here.
	* inet/ifreq.c: New file, true stub version.

	* socket/sa_len.c: New file.
	* socket/Makefile (aux): Add it.
	* sysdeps/unix/sysv/linux/Makefile
	[$(subdir) = socket] (sysdep_routines): Don't add sa_len here.
	* sysdeps/unix/sysv/linux/sa_len.c: Just #define HAVE_NET*_H
	and #include <socket/sa_len.c>.
	* sysdeps/unix/sysv/linux/s390/sa_len.c: Just #define
	HAVE_NETIUCV_IUCV_H and #include <sysdeps/unix/sysv/linux/sa_len.c>.

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: Moved to ...
	* bits/socket.h: ... here.

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h (enum __socket_type):
	Add SOCK_CLOEXEC, SOCK_NONBLOCK with values from FreeBSD.
	(SOCK_MAX, SOCK_TYPE_MASK): New macros.

2013-08-03  David S. Miller  <davem@davemloft.net>

	* po/ko.po: Update Korean translation from translation project.

2013-08-01  David S. Miller  <davem@davemloft.net>

	* manual/contrib.texi: Update entry for Siddhesh Poyarekar.  Add
	entries for Will Newton, Andi Kleen, David Holsgrove, and Ondrej
	Bilka.

2013-07-30  David S. Miller  <davem@davemloft.net>

	* po/fr.po: Update French translation from translation project.
